Fix buttons align in landing page and usage of useWindowDimensions

--- a/src/components/InfoCard/Button.module.scss
+++ b/src/components/InfoCard/Button.module.scss
@@ -2,7 +2,7 @@
 @import '../../styles/mixin';
 
 .button {
-  align-self: flex-start;
+  align-self: flex-end;
   padding: $spacing;
   transition: transform 0.2s;
   outline: none;
