--- a/src/components/InfoCard/LandingPage.module.scss
+++ b/src/components/InfoCard/LandingPage.module.scss
@@ -39,8 +39,10 @@
     justify-content: space-between;
     &:nth-child(even) {
       flex-direction: row-reverse;
+    }
+    &:nth-child(odd) {
       a {
-        align-self: flex-end;
+        align-self: flex-start;
       }
     }
   }
